--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -40,17 +40,18 @@ li {
   background-color: #262D35;
 }
 
-// jumbotron:
+.vcenter {
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+}
+
 .row {
   background-color: rgba(255,255,255,.10);
   border: 1px solid rgba(255,255,255,.25);
   border-radius: 0px;
   margin-top: 30px;
-
-  .logo {
-    width: 125px;
-    height: 125px;
-  }
+  
 }
 
 .jumbotron {
